# shadow

./: .gitignore  Cargo.toml  README.md
agent-core/: Cargo.toml  GAP.md
agent-core/src/: attribution.rs  lib.rs  memory.rs  observer.rs  provider.rs  tool.rs
crates/log/src/: event.rs  lib.rs
crates/memory/src/: lib.rs  none.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  lib.rs
crates/shadow-channels/: Cargo.toml
crates/shadow-channels/src/: cli.rs  lib.rs
crates/shadow-config/: Cargo.toml  GAP.md
crates/shadow-config/src/: autonomy.rs  lib.rs  migration.rs  observability.rs  policy.rs  provider.rs  providers.rs  proxy_client.rs  schema.rs  secrets.rs
crates/shadow-config/src/model_provider/: custom.rs  mod.rs
crates/shadow-config/src/multi/: alias_agent.rs  mod.rs  risk_profile.rs  runtime_profile.rs  skill_bundle.rs
crates/shadow-config/src/platform/: docker.rs  mod.rs  native.rs
crates/shadow-config/tests/: config.rs  migration.rs  provider.rs  secrets.rs
crates/shadow-core/: Cargo.toml
crates/shadow-core/src/: agent.rs  agent_runtime.rs  attribution.rs  channel.rs  lib.rs  memory.rs  observer.rs  platform.rs  provider.rs  runtime.rs  session_store.rs  tool.rs  workspace.rs
crates/shadow-core/src/kennel/: attribution.rs  memory.rs  mod.rs  observer.rs  provider.rs  tool.rs
crates/shadow-eval/: Cargo.toml
crates/shadow-eval/src/: lib.rs
crates/shadow-gateway/: Cargo.toml
crates/shadow-gateway/src/: lib.rs
crates/shadow-hardware/: Cargo.toml
crates/shadow-hardware/src/: lib.rs
crates/shadow-infra/: Cargo.toml
crates/shadow-infra/src/: lib.rs
crates/shadow-log/: Cargo.toml  GAP.md
crates/shadow-log/src/: broadcast.rs  config.rs  event.rs  layer.rs  lib.rs  macro.rs  observer_bridge.rs  reader.rs  subscriber.rs  tool_io.rs  writer.rs
crates/shadow-log/tests/: end_to_end.rs
crates/shadow-macros/: Cargo.toml
crates/shadow-macros/src/: lib.rs
crates/shadow-memory/: Cargo.toml  GAP.md
crates/shadow-memory/src/: agent_scoped.rs  agent_scoped_markdown.rs  conflict.rs  embedding.rs  lib.rs  markdown.rs  none.rs  sqlite.rs  strategy.rs  vector.rs
crates/shadow-memory/src/sqlite/: agent.rs  memory_impl.rs  mod.rs  mutate.rs  query.rs  recall.rs  schema.rs  store.rs  util.rs
crates/shadow-memory/tests/: sqlite_basic.rs
crates/shadow-plugins/: Cargo.toml
crates/shadow-plugins/src/: lib.rs
crates/shadow-providers/: Cargo.toml  GAP.md
crates/shadow-providers/src/: anthropic.rs  catalog.rs  dispatch.rs  error.rs  factory.rs  lib.rs  models_dev.rs  openai.rs  rate_limit.rs  reliable.rs  router.rs
crates/shadow-providers/tests/: factory.rs
crates/shadow-proxy/: Cargo.toml
crates/shadow-proxy/src/: a2a_client.rs  acp_client.rs  card.rs  core.rs  discovery.rs  http_transport.rs  lib.rs  local.rs  proxy_tool.rs  registry.rs  router.rs  stdio_transport.rs  task.rs  transport.rs
crates/shadow-runtime/: Cargo.toml  GAP.md  TRAIT_REFERENCE.md
crates/shadow-runtime/docs/: trait-reference.md
crates/shadow-runtime/src/: agent.rs  agent_bak.rs  config.rs  dispatcher.rs  lib.rs  prompt.rs
crates/shadow-runtime/src/agent/: loop_.rs  loop_detector.rs  mod.rs  system_prompt.rs
crates/shadow-runtime/src/agent/turn/: context.rs  events.rs  execution.rs  mod.rs  provider_call.rs  turn.rs
crates/shadow-runtime/src/cron/: mod.rs  schedule.rs  types.rs
crates/shadow-runtime/src/observability/: mod.rs  noop.rs  prometheus.rs
crates/shadow-runtime/src/prompt/: bootstrap.rs  caching.rs  context_compressor.rs  injection_guard.rs  mod.rs  persona.rs  prompt_guided.rs  safety_injection.rs  tools_payload.rs  truncation.rs
crates/shadow-runtime/src/security/: detect.rs  docker.rs  mod.rs  seatbelt.rs
crates/shadow-runtime/src/skills/: improver.rs  mod.rs  review.rs  skill_http.rs  skill_tool.rs
crates/shadow-runtime/src/tools/: attribution.rs  backup_tool.rs  content_search.rs  cron_tool.rs  file_download.rs  file_edit.rs  file_read.rs  file_upload.rs  file_upload_bundle.rs  file_write.rs  git_ops.rs  glob_search.rs  http_request.rs  memory_export.rs  memory_forget.rs  memory_purge.rs  memory_recall.rs  memory_store.rs  mod.rs  model_switch.rs  outcome.rs  registry.rs  scoped.rs  search_routing.rs  shell.rs  skill_manage.rs  spawn_subagent.rs  ssrf.rs  web_fetch.rs  web_search.rs  wrapper.rs
crates/shadow-runtime/src/tools/cron/: add.rs  common.rs  mod.rs  types.rs
crates/shadow-runtime/tests/: memory_strategy.rs
crates/shadow-spawn/: Cargo.toml
crates/shadow-spawn/src/: lib.rs
crates/shadow-tool-call-parser/: Cargo.toml
crates/shadow-tool-call-parser/src/: lib.rs
crates/shadow-tools/: Cargo.toml
crates/shadow-tools/src/: attribution.rs  lib.rs  llm_task.rs
crates/shadow-tui/: Cargo.toml
crates/shadow-tui/src/: app.rs  event.rs  lib.rs  observer.rs  runner.rs  terminal.rs  theme.rs
crates/shadow-tui/src/views/: chat.rs  config.rs  memory.rs  mod.rs
crates/shadow-tui/src/widgets/: command_palette.rs  input_box.rs  message_list.rs  mod.rs  status_bar.rs
docs/: architecture.md  coding-plan.md  comparison-hermes-claude.md  core-capability-comparison.md  file-split-plan.md  gap-analysis.md  log-design.md  memory-design.md  memory-plan.md  memory.md  multi-agent-db-pool.md  multi-agent-design.md  multi-user-design.md  postgres-lesson.md  prompt-engineering-comparison.md  provider-router-design.md  proxy-design.md  remote-agent-design.md  requirements.md  session-design.md  skill-design.md  skill-evolution-design.md  skill-plan.md  storage.md  structure-analysis.md  subagent-analysis.md  tool-design.md  tool-plan.md
docs/analysis/: agent-loop.md  channel.md  config-log.md  cron.md  memory.md  missing-components.md  security.md  session.md  skill.md  tools.md
docs/superpowers/plans/: 2026-07-01-shadow-tui.md
docs/superpowers/specs/: 2026-07-01-shadow-tui-design.md
src/: lib.rs  main.rs  proxy_main.rs
src/config/: mod.rs
