[workspace]
resolver = "2"
members = [
    ".",                       # 根 crate (二进制: shadow)
    "agent-core",              # 核心层: trait 定义
    "crates/shadow-config",    # 配置 schema 与加载
    "crates/shadow-log",       # 统一日志
    "crates/shadow-runtime",   # 运行时: agent loop
    "crates/shadow-providers", # LLM provider 实现
    "crates/shadow-memory",    # 记忆后端实现
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/gyb0211/shadow.git"

[workspace.dependencies]
agent-core = { path = "agent-core" }
shadow-config = { path = "crates/shadow-config" }
shadow-log = { path = "crates/shadow-log" }
shadow-runtime = { path = "crates/shadow-runtime" }
shadow-providers = { path = "crates/shadow-providers" }
shadow-memory = { path = "crates/shadow-memory" }

# 核心依赖
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
tempfile = "3"

[package]
name = "shadow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子 -- ZeroClaw 架构精简复刻: trait 驱动 + 微内核 + 归因系统"

[[bin]]
name = "shadow"
path = "src/main.rs"

[dependencies]
# ── Kernel 层 (始终编译) ──
agent-core.workspace = true
shadow-config.workspace = true
shadow-log.workspace = true
shadow-providers.workspace = true
shadow-memory.workspace = true

# ── Runtime 层 (可选, 默认开启) ──
shadow-runtime = { workspace = true, optional = true }

# ── 外部依赖 ──
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = ["runtime"]

# 完整运行时: Agent loop + AgentBuilder + Observer
# 关闭此 feature 构建 kernel-only 二进制 (~最小内核)
runtime = ["dep:shadow-runtime"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
