[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子核心层 -- trait 定义与共享类型"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
