[package]
name = "shadow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子运行时 -- agent loop + config + 安全策略"

[dependencies]
agent-core.workspace = true
shadow-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
toml = "0.8"
