[package]
name = "shadow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子核心 trait 层 -- Provider/Memory/Tool/Channel/Observer/AgentRuntime/SessionStore"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
futures.workspace = true
jsonschema.workspace = true
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["sync", "process", "macros", "rt"] }

strum = "0.28"
strum_macros = "0.28"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
