[package]
name = "shadow-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子统一日志面 -- record! 宏 + JSONL 持久化 + 广播"

[dependencies]
agent-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
