[package]
name = "shadow-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子统一日志面 -- record! 宏 + JSONL 持久化 + 广播 + 读取器"

[dependencies]
shadow-core.workspace = true
anyhow.workspace = true
#serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt", "ansi", "env-filter"] }
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = "0.4.33"

[dev-dependencies]
tempfile = "3"
