[package]
name = "shadow-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子记忆后端实现"

[dependencies]
agent-core.workspace = true
shadow-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
