[package]
name = "shadow-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子记忆后端实现"

[dependencies]
shadow-core.workspace = true
shadow-config.workspace = true
shadow-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot = "0.12"

rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
