[package]
name = "shadow-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子 LLM provider 实现"

[dependencies]
shadow-core.workspace = true
shadow-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
