[package]
name = "shadow-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子代理中转 -- A2A + ACP broker + registry"

[dependencies]
shadow-core.workspace = true
shadow-log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
which = "7"

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
