[package]
name = "shadow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子运行时 -- agent loop"

[dependencies]
shadow-core.workspace = true
shadow-log.workspace = true
shadow-config.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
cron = "0.15"
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
