[package]
name = "shadow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "影子运行时 -- agent loop"

[dependencies]
shadow-core.workspace = true
shadow-memory.workspace = true
shadow-log.workspace = true
shadow-config.workspace = true
shadow-providers.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
cron = "0.15"
uuid.workspace = true
futures.workspace = true
regex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
url.workspace = true
urlencoding.workspace = true

chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"

prometheus = { version = "0.14", default-features = false, optional = true }

[features]
default = ["obs-prometheus"]
obs-prometheus = ["dep:prometheus"]

[dev-dependencies]
tempfile.workspace = true
